--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,8 @@
   <router-outlet></router-outlet>
 </div>
 
-<footer class="footer">
+<!--footer class="footer">
   <div class="container">
-    <span class="text-muted">All Rights Reserved 2021 @in28minutes</span>
+    <span class="text-muted">All Rights Reserved 2021 @lisa</span>
   </div>
-</footer>
+</footer-->
