--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -34,6 +34,14 @@
         required
       />
     </div>
-    <button class="btn btn-success" type="submit">Submit</button>
+    <div class="form-group">
+      <label> Picture Profile</label>
+      <br />
+      <input type="file" (change)="onFileSelected($event)" />
+      <img *ngIf="employee.imageUrl" [src]="employee.imageUrl" width="100%" />
+    </div>
+    <button class="btn btn-success" style="margin-top: 10px" type="submit">
+      Submit
+    </button>
   </form>
 </div>
